
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char** com ;
 char* concat (char*,char*) ;
 char** cpp ;
 char** include ;
 char** ld ;
 scalar_t__ strcmp (char*,char*) ;
 scalar_t__ strncmp (char*,char*,int) ;

int option(char *arg) {
   if (strncmp(arg, "-lccdir=", 8) == 0) {
  cpp[0] = concat(&arg[8], "/gcc/cpp");
  include[0] = concat("-I", concat(&arg[8], "/include"));
  include[1] = concat("-I", concat(&arg[8], "/gcc/include"));
  ld[9] = concat(&arg[8], "/gcc/crtbegin.o");
  ld[12] = concat("-L", &arg[8]);
  ld[14] = concat("-L", concat(&arg[8], "/gcc"));
  ld[19] = concat(&arg[8], "/gcc/crtend.o");
  com[0] = concat(&arg[8], "/rcc");
 } else if (strcmp(arg, "-p") == 0 || strcmp(arg, "-pg") == 0) {
  ld[7] = "/usr/lib/gcrt1.o";
  ld[18] = "-lgmon";
 } else if (strcmp(arg, "-b") == 0)
  ;
 else if (strcmp(arg, "-g") == 0)
  ;
 else if (strncmp(arg, "-ld=", 4) == 0)
  ld[0] = &arg[4];
 else if (strcmp(arg, "-static") == 0) {
         ld[3] = "-static";
         ld[4] = "";
 } else
  return 0;
 return 1;
}
